package model;

public final class Viento extends Instrumento{
    //id,precio,stock,nombreInstrumento,material,<características según el tipo de instrumento>
    public Viento(String codigo, int precio, int stock, String nombre, String material){
        super(codigo,precio,stock,nombre,material);

    }

}
